Archive/7a616a82459a3f788ed05947edb5499c-61c3814520a8d4318f681038dc4b4da7/output
main.cpp:1:2: error: invalid preprocessing directive #version
 #version 330
  ^
main.cpp:2:7: error: expected constructor, destructor, or type conversion before '(' token
 layout(location = 0) in vec4 position;
       ^
main.cpp:3:11: error: '::main' must return 'int'
 void main() {
           ^
main.cpp: In function 'int main()':
main.cpp:4:5: error: 'gl_Position' was not declared in this scope
     gl_Position = position;
     ^
main.cpp:4:19: error: 'position' was not declared in this scope
     gl_Position = position;
                   ^
